--- a/src/choice/styles.css
+++ b/src/choice/styles.css
@@ -26,6 +26,12 @@
     margin-right: auto;
 }
 
+h1.brand-header {
+    display: inline;
+    font-size: 100px;
+    line-height: 1;
+}
+
 .separator {
     width: 100px;
     height: 150px;
